Added swipe api documentation
