# app/handler/swipe.go
@@ -18,6 +18,20 @@ type SwipeResponse struct {
 	MatchedID uint `json:"matched_id,omitempty"`
 }
 
+type APISwipeResponse struct {
+	Result SwipeResponse `json:"result"`
+}
+
+// @CreateUser Swipe User
+// @Description Allows for a user to perform a swipe action for another user and determine if they want to match
+// @Accept json
+// @Produce json
+// @Param id path int  true  "User ID"
+// @Param SwipeRequest body SwipeRequest true "matched_id is_desired"
+// @Success 200 {object} APISwipeResponse
+// @Failure 400 {object} APIError
+// @Failure 500 {object} APIError
+// @Router /user/{id}/swipe [post]
 func (h *Handler) Swipe(ctx echo.Context) error {
 	swipeRequest := SwipeRequest{}
 	if err := json.NewDecoder(ctx.Request().Body).Decode(&swipeRequest); err != nil {
@@ -40,7 +54,7 @@ func (h *Handler) Swipe(ctx echo.Context) error {
 	}
 
 	return ctx.JSON(http.StatusOK,
-		SingleResponse{
+		APISwipeResponse{
 			Result: SwipeResponse{
 				Matched:   resp.HasMatched,
 				MatchedID: resp.MatchedID,
