# docs/swagger.json
@@ -45,6 +45,55 @@
                     }
                 }
             }
+        },
+        "/user/{id}/swipe": {
+            "post": {
+                "description": "Allows for a user to perform a swipe action for another user and determine if they want to match",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "matched_id is_desired",
+                        "name": "SwipeRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.SwipeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.APISwipeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.APIError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -62,6 +111,14 @@
                 }
             }
         },
+        "handler.APISwipeResponse": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "$ref": "#/definitions/handler.SwipeResponse"
+                }
+            }
+        },
         "handler.CreateUserRequest": {
             "type": "object",
             "properties": {
@@ -74,6 +131,28 @@
             "type": "object",
             "properties": {
                 "result": {}
+            }
+        },
+        "handler.SwipeRequest": {
+            "type": "object",
+            "properties": {
+                "is_desired": {
+                    "type": "string"
+                },
+                "matched_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handler.SwipeResponse": {
+            "type": "object",
+            "properties": {
+                "matched": {
+                    "type": "boolean"
+                },
+                "matched_id": {
+                    "type": "integer"
+                }
             }
         }
     }
